# kitten-rs

./: .gitignore  Cargo.toml  README.md
kittentts-cli/: Cargo.toml
kittentts-cli/src/: main.rs
src/: lib.rs  models.rs  phonemize.rs  preprocess.rs  wav.rs
