[package]
name = "kittentts-lib"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["kittentts-cli"]

[features]
default = []
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
directml = ["ort/directml"]

[dependencies]
thiserror = "2.0"
ort = "2.0.0-rc.10"
ndarray = "0.16"
npyz = { version = "0.8", features = ["npz"] }
cmudict-fast = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20"
