[package]
name = "kittentts-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
coreml = ["kittentts-lib/coreml"]
cuda = ["kittentts-lib/cuda"]
directml = ["kittentts-lib/directml"]

[dependencies]
kittentts-lib = { path = "../" }
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
